@@ -14,11 +14,14 @@ vt_graph_impl::vt_graph_impl (void)
 vt_graph_impl::vt_graph_impl (int num_nodes)
 {
 	nodes_ ().length (0);
-  add_node ("ROOT");
+  add_node ("ROOT" ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
 	for (int i = 1; i < num_nodes; i++)
 		{
-			add_node ("CHILD");
-			nodes_ ()[0]->add_edge (nodes_ ()[i]);
+			add_node ("CHILD" ACE_ENV_ARG_PARAMETER);
+      ACE_CHECK;
+			nodes_ ()[0]->add_edge (nodes_ ()[i] ACE_ENV_ARG_PARAMETER);
+      ACE_CHECK;
 		}
 }
 
@@ -45,7 +48,7 @@ void vt_graph_impl::print (ACE_ENV_SINGLE_ARG_DECL)
 {
   cout << "Printing graph data..." << endl;
   cout << "Number of nodes: " << nodes_ ().length () << endl;
-  for (unsigned int i = 0; i < nodes_ ().length (); i++)
+  for (size_t i = 0; i < nodes_ ().length (); i++)
     nodes_ ()[i]->print ();
   cout << endl;
 }
@@ -77,69 +80,100 @@ test_impl::test_impl (CORBA::ORB_ptr orb) : orb_ (CORBA::ORB::_duplicate (orb))
 
 test_impl::~test_impl (void)
 {
-  this->orb_->shutdown (0);
+  this->orb_->shutdown (0 ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
 }
 
-void test_impl::pass_obj_graph_in (Supports_Test::graph * graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
+void test_impl::pass_obj_graph_in (
+    Supports_Test::graph * graph_param
+    ACE_ENV_ARG_DECL)
+  ACE_THROW_SPEC ((
+    CORBA::SystemException))
 {
 
-  ACE_ASSERT (graph_param->size () == 3);
-	graph_param->add_node ("NEW1");
-	ACE_ASSERT (graph_param->size () == 4);
+  ACE_ASSERT (graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 3);
+  graph_param->add_node ("NEW1" ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
+	ACE_ASSERT (graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 4);
 
 }
 
-void test_impl::pass_vt_graph_in (Supports_Test::vt_graph * vt_graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
+void test_impl::pass_vt_graph_in (
+    Supports_Test::vt_graph * vt_graph_param
+    ACE_ENV_ARG_DECL)
+  ACE_THROW_SPEC ((
+    CORBA::SystemException))
 {
 
-	ACE_ASSERT (vt_graph_param->size () == 3);
-	vt_graph_param->add_node ("NEW1");
-	ACE_ASSERT (vt_graph_param->size () == 4);
+	ACE_ASSERT (vt_graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 3);
+	vt_graph_param->add_node ("NEW1" ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
+	ACE_ASSERT (vt_graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 4);
 
 }
 
-void test_impl::pass_obj_graph_out (Supports_Test::graph_out graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
+void test_impl::pass_obj_graph_out (
+    Supports_Test::graph_out graph_param
+    ACE_ENV_ARG_DECL)
+  ACE_THROW_SPEC ((
+    CORBA::SystemException))
 {
 
   vt_graph_impl * the_vt_graph = 0;
   ACE_NEW (the_vt_graph, vt_graph_impl (4));
   graph_param = the_vt_graph->_this (ACE_ENV_SINGLE_ARG_PARAMETER);
-	ACE_TRY_CHECK;
+	ACE_CHECK;
 
-  ACE_ASSERT (graph_param->size () == 4);
-	graph_param->add_node ("NEW1");
-	ACE_ASSERT (graph_param->size () == 5);
+  ACE_ASSERT (graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 4);
+	graph_param->add_node ("NEW1" ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
+	ACE_ASSERT (graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 5);
 
 }
 
-void test_impl::pass_vt_graph_out (Supports_Test::vt_graph_out vt_graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
+void test_impl::pass_vt_graph_out (
+    Supports_Test::vt_graph_out vt_graph_param
+    ACE_ENV_ARG_DECL)
+  ACE_THROW_SPEC ((
+    CORBA::SystemException))
 {
 
   vt_graph_impl * the_vt_graph = 0;
 	ACE_NEW (the_vt_graph, vt_graph_impl (4));
 	vt_graph_param = the_vt_graph;
 
-	ACE_ASSERT (vt_graph_param->size () == 4);
-	vt_graph_param->add_node ("NEW1");
-	ACE_ASSERT (vt_graph_param->size () == 5);
+	ACE_ASSERT (vt_graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 4);
+	vt_graph_param->add_node ("NEW1" ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
+	ACE_ASSERT (vt_graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 5);
 
 }
 
-void test_impl::pass_obj_graph_inout (Supports_Test::graph * &graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
+void test_impl::pass_obj_graph_inout (
+    Supports_Test::graph * &graph_param
+    ACE_ENV_ARG_DECL)
+  ACE_THROW_SPEC ((
+    CORBA::SystemException))
 {
 
-  ACE_ASSERT (graph_param->size () == 6);
-	graph_param->add_node ("NEW3");
-	ACE_ASSERT (graph_param->size () == 7);
+  ACE_ASSERT (graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 6);
+	graph_param->add_node ("NEW3" ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
+	ACE_ASSERT (graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 7);
 
 }
 
-void test_impl::pass_vt_graph_inout (Supports_Test::vt_graph * &vt_graph_param ACE_ENV_ARG_DECL) ACE_THROW_SPEC ((CORBA::SystemException))
+void test_impl::pass_vt_graph_inout (
+    Supports_Test::vt_graph * &vt_graph_param
+    ACE_ENV_ARG_DECL)
+  ACE_THROW_SPEC ((
+    CORBA::SystemException))
 {
 
-	ACE_ASSERT (vt_graph_param->size () == 6);
-	vt_graph_param->add_node ("NEW3");
-	ACE_ASSERT (vt_graph_param->size () == 7);
+	ACE_ASSERT (vt_graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 6);
+	vt_graph_param->add_node ("NEW3" ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
+	ACE_ASSERT (vt_graph_param->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 7);
 
 }
 
@@ -201,7 +235,7 @@ void node_impl::print (void)
   cout << "    Weight: " << weight_ () << endl;
   cout << "    Degree: " << degree_ () << endl;
   cout << "    Neighbors: " << endl;
-  for (unsigned int i = 0; i < neighbors_ ().length (); i++)
+  for (size_t i = 0; i < neighbors_ ().length (); i++)
     cout << "      " << neighbors_ ()[i]->name_ () << endl;
 }
 
